// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> rendered with some data should render <card/> 1`] = `
.c4 {
  font-size: 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #e5e5e5;
  font-weight: bold;
  margin-left: 56px;
  margin-right: 56px;
  margin-top: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 50px;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  font-size: 12px;
  color: #fff;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: none;
}

.c13 {
  margin-top: 5px;
  font-size: 10px;
  color: #fff;
  margin-bottom: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: none;
  line-height: normal;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  display: none;
  position: absolute;
  bottom: 0;
  padding: 10px;
  background-color: #0000008f;
}

.c7 {
  border: 0;
  width: 100%;
  max-width: 305px;
  cursor: pointer;
  height: auto;
  padding: 0;
  margin: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 5px;
  position: relative;
  cursor: pointer;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c6:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
  z-index: 99;
}

.c6:first-of-type {
  margin-left: 56px;
}

.c6:last-of-type {
  margin-right: 56px;
}

@media (max-width:1000px) {
  .c1 > .c3 {
    margin-left: 30px;
  }
}

@media (min-width:1100px) {
  .c2 > .c0:first-of-type {
    margin-top: -150px;
  }
}

@media (min-width:1200px) {
  .c6:hover .c8,
  .c6 .c12,
  .c6 .c10 {
    display: block;
    z-index: 100;
  }
}

@media (max-width:1000px) {
  .c6:first-of-type {
    margin-left: 30px;
  }
}

@media (max-width:1000px) {
  .c6:last-of-type {
    margin-right: 30px;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2"
  >
    <div
      class="c0 c1"
    >
      <p
        class="c3 c4"
      >
        Documentaries
      </p>
      <div
        class="c5"
      >
        <div
          class="c6"
          data-testid="tiger-king"
        >
          <img
            class="c7"
            src="/images/series/documentaries/tiger-king/small.jpg"
          />
          <div
            class="c8 c9"
          >
            <p
              class="c10 c11"
            >
              Tiger King
            </p>
            <p
              class="c12 c13"
            >
              Tiger King description
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <p
        class="c3 c4"
      >
        Feel Good
      </p>
      <div
        class="c5"
      >
        <div
          class="c6"
          data-testid="juno"
        >
          <img
            class="c7"
            src="/images/series/feel-good/juno/small.jpg"
          />
          <div
            class="c8 c9"
          >
            <p
              class="c10 c11"
            >
              Juno
            </p>
            <p
              class="c12 c13"
            >
              Juno description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card/> rendered with some data should render feature text 1`] = `
.c4 {
  font-size: 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #e5e5e5;
  font-weight: bold;
  margin-left: 56px;
  margin-right: 56px;
  margin-top: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 50px;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  font-size: 12px;
  color: #fff;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: none;
}

.c13 {
  margin-top: 5px;
  font-size: 10px;
  color: #fff;
  margin-bottom: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: none;
  line-height: normal;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  display: none;
  position: absolute;
  bottom: 0;
  padding: 10px;
  background-color: #0000008f;
}

.c7 {
  border: 0;
  width: 100%;
  max-width: 305px;
  cursor: pointer;
  height: auto;
  padding: 0;
  margin: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 5px;
  position: relative;
  cursor: pointer;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c6:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
  z-index: 99;
}

.c6:first-of-type {
  margin-left: 56px;
}

.c6:last-of-type {
  margin-right: 56px;
}

@media (max-width:1000px) {
  .c1 > .c3 {
    margin-left: 30px;
  }
}

@media (min-width:1100px) {
  .c2 > .c0:first-of-type {
    margin-top: -150px;
  }
}

@media (min-width:1100px) {
  .bVgKno > .c0:first-of-type {
    margin-top: -150px;
  }
}

@media (min-width:1200px) {
  .c6:hover .c8,
  .c6 .c12,
  .c6 .c10 {
    display: block;
    z-index: 100;
  }
}

@media (max-width:1000px) {
  .c6:first-of-type {
    margin-left: 30px;
  }
}

@media (max-width:1000px) {
  .c6:last-of-type {
    margin-right: 30px;
  }
}

@media (max-width:600px) {

}

@media (max-width:600px) {

}

@media (max-width:1000px) {
  .QXdcK .c3 {
    font-size: 20px;
    line-height: 20px;
    margin-bottom: 10px;
  }
}

@media (max-width:1000px) {

}

<div
  class="c0 c1"
>
  <div
    class="c2"
  >
    <div
      class="c0 c1"
    >
      <p
        class="c3 c4"
      >
        Documentaries
      </p>
      <div
        class="c5"
      >
        <div
          class="c6"
          data-testid="tiger-king"
        >
          <img
            class="c7"
            src="/images/series/documentaries/tiger-king/small.jpg"
          />
          <div
            class="c8 c9"
          >
            <p
              class="c10 c11"
            >
              Tiger King
            </p>
            <p
              class="c12 c13"
            >
              Tiger King description
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <p
        class="c3 c4"
      >
        Feel Good
      </p>
      <div
        class="c5"
      >
        <div
          class="c6"
          data-testid="juno"
        >
          <img
            class="c7"
            src="/images/series/feel-good/juno/small.jpg"
          />
          <div
            class="c8 c9"
          >
            <p
              class="c10 c11"
            >
              Juno
            </p>
            <p
              class="c12 c13"
            >
              Juno description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
